@@ -2089,6 +2089,7 @@
 <b>4.4.x</b><br>
 1) libcurl: up to 7.49.0 version.<br>
 2) kernel: ralink_arch: allow highmem region for 512M devices.<br>
+3) kernel: net: do not block BH while processing socket backlog.<br>
 <br>
 <br>
 <br>
